# translingual

./: LICENSE  Normalization.ipynb  README.md  Sentiment analysis (step 1).ipynb  pyproject.toml
code_memoire_raw/: Normalization.ipynb  Sentiment analysis (step 1).ipynb
code_memoire_transform/: Sentiment analysis (step 2 & 3).ipynb  models.py
